--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,7 @@
             "name": "Launch Current File",
             "request": "launch",
             "args": ["config.txt"],
+            "console": "externalTerminal",
             "mainClass": "${file}"
         },
         {
